<resources>
    <string name="app_name">SmartDom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="change_home">CHANGE HOME</string>
    <string name="add_new_home">ADD NEW HOME</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_caps">LOGIN</string>

    <string name="turn_on">TURN ON</string>
    <string name="turn_off">TURN OFF</string>
    <string name="led_stripe_color">Led stripe color</string>
    <string name="temperature">Temperature:</string>
    <string name="meteorology">Meteorology</string>
    <string name="humidity">Humidity:</string>
    <string name="gases">Gases</string>
    <string name="co">CO:</string>
    <string name="gas">Gas:</string>
    <string name="door_motor">Door Motor</string>
    <string name="open_door">OPEN DOOR</string>
    <string name="close_door">CLOSE DOOR</string>
    <string name="add_rooms_from_web_panel_n_or_swipe_to_refresh">Add rooms from the admin panel\n or swipe to refresh</string>
    <string name="server_address_error">Problem with server address. Check in settings.</string>
    <string name="could_not_connect_with_server">Could not connect with server. Check internet connection.</string>
    <string name="login_error">Login error. Wrong login or password.</string>
    <string name="module_connection_error">Could not connect with module.</string>
    <string name="wrong_ip_format">Wrong IP format. Did not save.</string>

    <array name="entries_list_preference">
        <item>First preference entry</item>
        <item>second preference entry</item>
        <item>Third preference entry</item>
    </array>

    <array name="entryvalues_list_preference">
        <item>First preference value</item>
        <item>second preference value</item>
        <item>Third preference value</item>
    </array>

    <string name="blind_motor">Blind motor</string>
    <string name="open_blind">OPEN BLIND</string>
    <string name="close_blind">CLOSE BLIND</string>
    <string name="stop_open">STOP OPEN</string>
    <string name="stop_closing">STOP CLOSING</string>
    <string name="no_room">No room</string>
    <string name="no_modules">No modules. You can add them in the admin panel.</string>
    <string name="rooms">Rooms</string>

    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="ble_modules">BLE modules</string>
    <string name="all_modules">All modules</string>
    <string name="smoke">Smoke</string>
    <string name="refresh">REFRESH CONNECTION</string>
    <string name="number_of_rooms">Number of rooms:</string>
    <string name="number_of_modules">Number of modules:</string>
    <string name="click_to_exit">Press back one more time to exit.</string>
    <string name="rooms_loaded">Rooms loaded</string>
</resources>
