<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

    <group
        android:id="@+id/private_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rooms" />
        <item
            android:id="@+id/nav_ble"
            android:icon="@drawable/ic_family"
            android:title="@string/ble_modules" />
    </group>

</menu>
