<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.edu.uj.ii.smartdom.fragments.BlindMotorFragment">

    <TextView
        android:id="@+id/blind_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/blind_motor"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/door_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blind_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_lock_open" />

    <Button
        android:id="@+id/open_blind_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/close_blind_button"
        android:layout_marginBottom="10dp"
        android:text="@string/open_blind" />

    <Button
        android:id="@+id/close_blind_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/close_blind" />


</RelativeLayout>
